--- a/src/clientModule/views/client.html
+++ b/src/clientModule/views/client.html
@@ -66,16 +66,47 @@
                             </button>
                         </div>
                         <div class="modal-body">
-                            <input type="text" class="form-control" id="nameEmpresa" placeholder="Nombre">
+                            <input type="text" class="form-control" id="nameEnterprise" placeholder="Nombre">
                             <br>
-                            <input type="text" class="form-control" id="nitEmpresa" placeholder="Cedula">
+                            <input type="text" class="form-control" id="nitEnterprise" placeholder="Nit">
                             <br>
-                            <select class="form-control">
-                                <option>opcion 1</option>
+                            <label for="sizeEnterprise">Tamaño de la empresa</label>
+                            <select class="form-control" id="sizeEnterprise">
+                                <option>0-10 Empleados</option>
+                                <option>11-50 Empleados</option>
+                                <option>51-200 Empleados</option>
+                                <option>201-500 Empleados</option>
+                                <option>1.001-5.000 Empleados</option>
+                                <option>5.001-10.000 Empleados</option>
+                                <option>Más de 10.000 Empleados</option>
                               </select>
                               <br>
-                              <select class="form-control">
-                                <option>opcion 1</option>
+                              <label for="sectorEnterprise">Sector de la empresa</label>
+                              <select class="form-control" id="sectorEnterprise">
+                                <option>Agropecuario</option>
+                                <option>Alimentos y bébidas</option>
+                                <option>Arquitectura y construcción</option>
+                                <option>Automotor</option>  
+                                <option>Comercio</option>
+                                <option>Consultoría</option> 
+                                <option>Cosméticos y productos médicos</option>
+                                <option>Energía, gas y agua</option>
+                                <option>Electrodomésticos</option>
+                                <option>Empaques</option>
+                                <option>Materiales de construcción</option>
+                                <option>Petróleo/option>
+                                <option>Productos de cuidado personal y del hogar</option>     
+                                <option>Quimico y farmacéutico</option>
+                                <option>Servicios de tecnología</option>
+                                <option>Servicios financieros</option>
+                                <option>Software y servicios informáticos</option>
+                                <option>Tabaco</option>
+                                <option>Telecomunicaciones</option>
+                                <option>Transporte de mercancia</option>
+                                <option>Transporte y movilidad</option>
+                                <option>Turismo y ocio</option>
+                                <option>Otro</option>
+                                
                               </select>
                         </div>
                         <div class="modal-footer">
