create complete fixed

--- a/src/views/index.html
+++ b/src/views/index.html
@@ -21,9 +21,9 @@
         </div>
     </div>
     <button class="btn-info" id="show-all-projects">Mostrar todos los Proyectos</button>
+    <button type="button" class="btn-info" data-toggle="modal" data-target="#myModal" id="open-modal">Crear
+        Proyecto</button>
     <div id="projects"></div>
-
-    <button type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#myModal" id="open-modal">Open Modal</button>
 
     <div id="myModal" class="modal fade" role="dialog">
         <div class="modal-dialog">
