--- a/src/clientModule/views/client.html
+++ b/src/clientModule/views/client.html
@@ -48,7 +48,8 @@
                     <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
                         <a class="dropdown-item" id="createEmpresa" data-toggle="modal" data-target="#exampleModalLong"
                             style="cursor:pointer">Empresa</a>
-                        <a class="dropdown-item" id="createPerson" style="cursor:pointer">Persona</a>
+                        <a class="dropdown-item" id="createPerson" data-toggle="modal" data-target="#personaModal"
+                            style="cursor:pointer">Persona</a>
                     </div>
                 </div>
             </div>
@@ -80,9 +81,9 @@
                                 <option>5.001-10.000 Empleados</option>
                                 <option>Más de 10.000 Empleados</option>
                               </select>
-                              <br>
-                              <label for="sectorEnterprise">Sector de la empresa</label>
-                              <select class="form-control" id="sectorEnterprise">
+                            <br>
+                            <label for="sectorEnterprise">Sector de la empresa</label>
+                            <select class="form-control" id="sectorEnterprise">
                                 <option>Agropecuario</option>
                                 <option>Alimentos y bébidas</option>
                                 <option>Arquitectura y construcción</option>
@@ -106,6 +107,39 @@
                                 <option>Transporte y movilidad</option>
                                 <option>Turismo y ocio</option>                                
                               </select>
+
+                                
+                            
+                        </div>
+                       
+                        <div class="modal-footer">
+                            <button type="button" class="btn btn-secondary" data-dismiss="modal">Cerrar</button>
+                            <button type="button" class="btn btn-primary">Guardar</button>
+                        </div>
+
+                        <div>
+                                <input type="file" class="custom-file-input" id="customFile">
+                                <label class="custom-file-label" for="customFile">Choose file</label>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="modal fade" id="personaModal" tabindex="-1" role="dialog" aria-labelledby="personaModal"
+                aria-hidden="true">
+                <div class="modal-dialog" role="document">
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <h5 class="modal-title" id="personaModalTitle">Creando Persona</h5>
+                            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                <span aria-hidden="true">&times;</span>
+                            </button>
+                        </div>
+                        <div class="modal-body">
+                            <input type="text" class="form-control" id="nameClient" placeholder="Nombre">
+                            <br>
+                            <input type="text" class="form-control" id="cedulaClient" placeholder="Cédula">
+                            <br>
                         </div>
                         <div class="modal-footer">
                             <button type="button" class="btn btn-secondary" data-dismiss="modal">Cerrar</button>
