--- a/src/views/index.html
+++ b/src/views/index.html
@@ -20,6 +20,13 @@
             <button class="btn-success" id="searching-trigger">Buscar</button>
         </div>
     </div>
+    <div>
+        Ver Proyecto:
+        <select name="projects" id="all-projects">
+
+        </select>
+        <button class="btn btn-warning" id="go-to-crud">Ir</button>
+    </div>
     <button class="btn-info" id="show-all-projects">Mostrar todos los Proyectos</button>
     <button type="button" class="btn-info" data-toggle="modal" data-target="#myModal" id="open-modal">Crear
         Proyecto</button>
@@ -74,7 +81,6 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js" integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k"
         crossorigin="anonymous"></script>
-
 </body>
 
 </html>
