--- a/src/sofkianModule/views/sofkian.html
+++ b/src/sofkianModule/views/sofkian.html
@@ -32,18 +32,58 @@
         </div>
     </div>
 
-    <div>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <a class="navbar-brand" href="#">Navbar</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+      
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav mr-auto">
+            <li class="nav-item active">
+              <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Link</a>
+            </li>
+            <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                Dropdown
+              </a>
+              <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                <a class="dropdown-item" href="#">Action</a>
+                <a class="dropdown-item" href="#">Another action</a>
+                <div class="dropdown-divider"></div>
+                <a class="dropdown-item" href="#">Something else here</a>
+              </div>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link disabled" href="#">Disabled</a>
+            </li>
+          </ul>
+          <form class="form-inline my-2 my-lg-0">
+            <input class="form-control mr-sm-2" type="search" placeholder="Escribe Aqui el nombre"id="nombreSofkianoBuscado" aria-label="Search">
+            <button class="btn btn-outline-success my-2 my-sm-0" id="sofkianoEspecificoBoton" type="button">Buscar Sofkiano</button>
+          </form>
+        </div>
+      </nav>
+
+    <div class="row" id="sofkianoEspecificoDiv">
+                
+    </div>
+
+    <!-- div>
         <div class="card" style="width: 18rem; padding: 0.2%; margin: 2%">
             <img src="https://scontent-bog1-1.cdninstagram.com/vp/8fc08ca2e697df83a87fc8d0f48d1f7c/5D008FB3/t51.2885-15/e35/44497515_191274545127444_4674992303067103232_n.jpg?_nc_ht=scontent-bog1-1.cdninstagram.com" class="card-img-top" alt="...">
             <div class="card-body">
                 <h5 class="card-title">@Manchabla</h5>
                 <p class="card-text">
                     Like it, Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis ipsa nulla, necessitatibus adipisci qui nam doloribus expedita fugiat quos saepe asperiores. Quod vero eveniet nostrum sequi rem amet deleniti soluta!
-                </p>
+                
                 <a href="#" class="btn btn-primary">Go somewhere</a>
             </div>
         </div>
-    </div>
+    </div-->
 
     <script>
         function w3_open() {
@@ -58,8 +98,8 @@
             document.getElementById("mySidebar").style.display = "none";
             document.getElementById("openNav").style.display = "inline-block";
         }
-    </script>
-
+        </script>
+        <script src="../../../dist/bundle.js"></script>
 </body>
 
 </html>
