--- a/src/sofkianModule/views/sofkian.html
+++ b/src/sofkianModule/views/sofkian.html
@@ -58,7 +58,7 @@
               </div>
             </li>
             <li class="nav-item">
-              <a class="nav-link disabled" href="#">Disabled</a>
+              <a class="nav-link" id="eliminarSofkianBoton" href="#">Eliminar Sofkiano</a>
             </li>
           </ul>
           <form class="form-inline my-2 my-lg-0">
