se agrega la funcion editar Sofkiano

--- a/src/sofkianModule/views/sofkian.html
+++ b/src/sofkianModule/views/sofkian.html
@@ -33,16 +33,13 @@
     </div>
 
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="#">Navbar</a>
+        <a class="navbar-brand" href="#">Sofkianos</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
       
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav mr-auto">
-            <li class="nav-item active">
-              <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-            </li>
             <li class="nav-item">
               <a class="nav-link" href="#">Link</a>
             </li>
@@ -58,8 +55,11 @@
               </div>
             </li>
             <li class="nav-item">
-              <a class="nav-link" id="eliminarSofkianBoton" href="#">Eliminar Sofkiano</a>
+              <a class="nav-link" id="eliminarSofkianBoton" href="#">Eliminar</a>
             </li>
+            <li class="nav-item">
+                <a class="nav-link" id="editarSofkianBoton" href="#">Editar</a>
+              </li>
           </ul>
           <form class="form-inline my-2 my-lg-0">
             <input class="form-control mr-sm-2" type="search" placeholder="Escribe Aqui el nombre"id="nombreSofkianoBuscado" aria-label="Search">
@@ -72,7 +72,7 @@
                 
     </div>
 
-    <!-- div>
+    <!-- div style="display:None">
         <div class="card" style="width: 18rem; padding: 0.2%; margin: 2%">
             <img src="https://scontent-bog1-1.cdninstagram.com/vp/8fc08ca2e697df83a87fc8d0f48d1f7c/5D008FB3/t51.2885-15/e35/44497515_191274545127444_4674992303067103232_n.jpg?_nc_ht=scontent-bog1-1.cdninstagram.com" class="card-img-top" alt="...">
             <div class="card-body">
