--- a/src/clientModule/views/client.html
+++ b/src/clientModule/views/client.html
@@ -46,8 +46,7 @@
                         Crear cliente
                     </button>
                     <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-                        <a class="dropdown-item" id="createEmpresa" data-toggle="modal" data-target="#modalE"
-                            style="cursor:pointer">Empresa</a>
+                        <a class="dropdown-item" id="createEmpresa" data-toggle="modal" data-target="#modalE" style="cursor:pointer">Empresa</a>
                         <a class="dropdown-item" id="createPerson" data-toggle="modal" data-target="#personaModal"
                             style="cursor:pointer">Persona</a>
                     </div>
@@ -80,23 +79,23 @@
                                 <option>1.001-5.000 Empleados</option>
                                 <option>5.001-10.000 Empleados</option>
                                 <option>Más de 10.000 Empleados</option>
-                              </select>
+                            </select>
                             <br>
                             <label for="sectorEnterprise">Sector de la empresa</label>
                             <select class="form-control" id="sectorEnterprise">
                                 <option>Agropecuario</option>
                                 <option>Alimentos y bébidas</option>
                                 <option>Arquitectura y construcción</option>
-                                <option>Automotor</option>  
+                                <option>Automotor</option>
                                 <option>Comercio</option>
-                                <option>Consultoría</option> 
+                                <option>Consultoría</option>
                                 <option>Cosméticos y productos médicos</option>
                                 <option>Energía, gas y agua</option>
                                 <option>Electrodomésticos</option>
                                 <option>Empaques</option>
                                 <option>Materiales de construcción</option>
                                 <option>Petróleo</option>
-                                <option>Productos de cuidado personal y del hogar</option>     
+                                <option>Productos de cuidado personal y del hogar</option>
                                 <option>Quimico y farmacéutico</option>
                                 <option>Servicios de tecnología</option>
                                 <option>Servicios financieros</option>
@@ -105,21 +104,22 @@
                                 <option>Telecomunicaciones</option>
                                 <option>Transporte de mercancia</option>
                                 <option>Transporte y movilidad</option>
-                                <option>Turismo y ocio</option>                                
-                              </select>
+                                <option>Turismo y ocio</option>
+                            </select>
 
-                                
-                            
+
+
                         </div>
-                       
+                        <div id="message" style="padding-left: 18px"></div>
+
                         <div class="modal-footer">
                             <button type="button" class="btn btn-secondary" data-dismiss="modal">Cerrar</button>
                             <button type="button" id="saveEnterprise" class="btn btn-primary">Guardar</button>
                         </div>
 
                         <div>
-                                <input type="file" class="custom-file-input" id="customFile">
-                                <label class="custom-file-label" for="customFile">Choose file</label>
+                            <input type="file" class="custom-file-input" id="customFile">
+                            <label class="custom-file-label" for="customFile">Choose file</label>
                         </div>
                     </div>
                 </div>
