--- a/src/clientModule/views/client.html
+++ b/src/clientModule/views/client.html
@@ -53,7 +53,7 @@
                 </div>
             </div>
 
-            <!-- Modal -->
+            <!-- Modal Enterprise -->
             <div class="modal fade" id="modalE" tabindex="-1" role="dialog" aria-labelledby="modalEnterprise"
                 aria-hidden="true">
                 <div class="modal-dialog" role="document">
@@ -125,6 +125,8 @@
                 </div>
             </div>
 
+            <!-- Modal Enterprise -->
+
             <div class="modal fade" id="personaModal" tabindex="-1" role="dialog" aria-labelledby="personaModalTitle"
                 aria-hidden="true">
                 <div class="modal-dialog" role="document">
@@ -136,15 +138,15 @@
                             </button>
                         </div>
                         <div class="modal-body">
-                            <input type="text" class="form-control" id="nameClient" placeholder="Nombre">
+                            <input type="text" class="form-control" id="nameP" placeholder="Nombre">
                             <br>
-                            <input type="text" class="form-control" id="cedulaClient" placeholder="Cédula">
+                            <input type="text" class="form-control" id="cedulaP" placeholder="Cédula">
                             <br>
                         </div>
                         <div id="message" style="padding-left: 18px"></div>
                         <div class="modal-footer">
                             <button type="button" class="btn btn-secondary" data-dismiss="modal">Cerrar</button>
-                            <button type="button" class="btn btn-primary" id="createP">Guardar</button>
+                            <button type="button" class="btn btn-primary" id="savePerson">Guardar</button>
                         </div>
                     </div>
                 </div>
