--- a/src/clientModule/views/client.html
+++ b/src/clientModule/views/client.html
@@ -110,7 +110,7 @@
 
 
                         </div>
-                        <div id="message" style="padding-left: 18px"></div>
+                        <div id="messageEnterprise" style="padding-left: 18px"></div>
 
                         <div class="modal-footer">
                             <button type="button" class="btn btn-secondary" data-dismiss="modal">Cerrar</button>
@@ -143,7 +143,7 @@
                             <input type="text" class="form-control" id="cedulaP" placeholder="Cédula">
                             <br>
                         </div>
-                        <div id="message" style="padding-left: 18px"></div>
+                        <div id="messagePerson" style="padding-left: 18px"></div>
                         <div class="modal-footer">
                             <button type="button" class="btn btn-secondary" data-dismiss="modal">Cerrar</button>
                             <button type="button" class="btn btn-primary" id="savePerson">Guardar</button>
