--- a/src/clientModule/views/client.html
+++ b/src/clientModule/views/client.html
@@ -13,16 +13,17 @@
 </head>
 
 <body>
-    <div class="container" id="client-container">
-        <nav class="navbar navbar-dark bg-dark">
-            <a class="navbar-brand" style="color:white">Clientes Potenciales</a>
-            <div class="form-inline" action="">
-                <input class="form-control mr-sm-2" id="clientToSearch" type="" placeholder="Nombre de la empresa"
-                    aria-label="Search" required>
-                <button id="searchButton" class="btn btn-outline-success my-2 my-sm-0" type="button">Buscar</button>
-            </div>
-        </nav>
-        <hr>
+    <nav class="navbar navbar-dark bg-dark">
+        <a class="navbar-brand" style="color:white">Clientes Potenciales</a>
+        <div class="form-inline" action="">
+            <input class="form-control mr-sm-2" id="clientToSearch" type="" placeholder="Nombre de la empresa"
+                aria-label="Search" required>
+            <button id="searchButton" class="btn btn-outline-success my-2 my-sm-0" type="button">Buscar</button>
+        </div>
+    </nav>
+    <hr>
+    <div class="container">
+
         <div class="row">
             <div id="optionsClient">
                 <div class="dropdown">
@@ -105,9 +106,6 @@
                                 <option>Transporte y movilidad</option>
                                 <option>Turismo y ocio</option>
                             </select>
-
-
-
                         </div>
                         <div id="messageEnterprise" style="padding-left: 18px"></div>
 
@@ -150,13 +148,10 @@
 
         </div>
         <br>
-        <div class="row" id="client">
-
-        </div>
 
     </div>
 
-    <script src="../../HTMLController.js"></script>
+    <script src="../../../dist/bundle.js"></script>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
         crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js" integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut"
