--- a/src/sofkianModule/views/sofkian.html
+++ b/src/sofkianModule/views/sofkian.html
@@ -12,7 +12,7 @@
 
 <body>
 
-    <div class="w3-sidebar w3-bar-block w3-card w3-animate-left" style="display:none; align-self: flex-end" id="mySidebar">
+    <div class="w3-sidebar w3-bar-block w3-card w3-animate-left" style="display:none; align-self: flex-end" id="SofkianSidebar">
 
         <button class="w3-bar-item w3-button w3-large" onclick="w3_close()" style="text-align: right">
             &times;
@@ -57,22 +57,9 @@
         </div>
       </nav>
 
-    <div class="row" id="sofkianoEspecificoDiv">
+    <div class="row" id="sofkianDiv">
                 
     </div>
-
-    <!-- div style="display:None">
-        <div class="card" style="width: 18rem; padding: 0.2%; margin: 2%">
-            <img src="https://scontent-bog1-1.cdninstagram.com/vp/8fc08ca2e697df83a87fc8d0f48d1f7c/5D008FB3/t51.2885-15/e35/44497515_191274545127444_4674992303067103232_n.jpg?_nc_ht=scontent-bog1-1.cdninstagram.com" class="card-img-top" alt="...">
-            <div class="card-body">
-                <h5 class="card-title">@Manchabla</h5>
-                <p class="card-text">
-                    Like it, Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis ipsa nulla, necessitatibus adipisci qui nam doloribus expedita fugiat quos saepe asperiores. Quod vero eveniet nostrum sequi rem amet deleniti soluta!
-                
-                <a href="#" class="btn btn-primary">Go somewhere</a>
-            </div>
-        </div>
-    </div-->
 
     <script>
         function w3_open() {
