Fixing Update Project
technologies and sofkianos lasting!

--- a/src/views/index.html
+++ b/src/views/index.html
@@ -46,7 +46,7 @@
                         <label>Imagen <input type="file" id="project-image">
                         </label>
                         <hr>
-                        <label>Cliente: <select id="select-clients">
+                        <label>Cliente: <select id="project-client-select">
 
                             </select>
                         </label>
@@ -64,7 +64,7 @@
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-                    <button type="button" class="btn btn-success" id="create-project" data-dismiss="modal">Crear</button>
+                    <button type="button" class="btn btn-success" id="create-project">Crear</button>
                 </div>
             </div>
 
