--- a/searchBar/searchBar.css
+++ b/searchBar/searchBar.css
@@ -1,6 +1,6 @@
 .search-box {
     position: absolute;
-    top: 20%;
+    top: 10%;
     left: 80%;
     transform: translate(-50%, -50%);
     background: #2f3640;
@@ -10,7 +10,7 @@
 }
 
 .search-box:hover>.search-txt {
-    width: 340px;
+    width: 300px;
     padding: 0 6px;
 }
 
@@ -26,7 +26,7 @@
     height: 40px;
     border-radius: 50%;
     background: #2f3640;
-    display: flex;
+    display: inline-flex;
     justify-content: center;
     align-items: center;
     transition: 0.4s;
