--- a/src/projectModule/views/index.html
+++ b/src/projectModule/views/index.html
@@ -20,13 +20,12 @@
             <button class="btn-success" id="searching-trigger">Buscar</button>
         </div>
     </div>
-    
     <button class="btn-info" id="show-all-projects">Mostrar todos los Proyectos</button>
+    <button type="button" class="btn-info" data-toggle="modal" data-target="#createModal" id="open-create-modal">Crear
+        Proyecto</button>
     <div id="projects"></div>
 
-    <button type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#myModal" id="open-modal">Open Modal</button>
-
-    <div id="myModal" class="modal fade" role="dialog">
+    <div id="createModal" class="modal fade" role="dialog">
         <div class="modal-dialog">
 
             <div class="modal-content">
@@ -37,7 +36,7 @@
                     <form>
                         <label>Nombre: <input type="text" id="project-name">
                         </label>
-                        <label>Descripción: <input type="text" id="project-description">
+                        <label>Descripción: <textarea type="text" id="project-description"></textarea>
                         </label>
                         <label>Fecha de inicio: <input type="date" id="project-start-date">
                         </label>
@@ -46,7 +45,7 @@
                         <label>Imagen <input type="file" id="project-image">
                         </label>
                         <hr>
-                        <label>Cliente: <select id="select-clients" id="project-client">
+                        <label>Cliente: <select id="project-client-select">
 
                             </select>
                         </label>
@@ -64,19 +63,16 @@
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-                    <button type="button" class="btn btn-success" id="create-project">Crear</button>
-                    <button id="test">Testing</button>
+                    <button type="button" class="btn btn-success" id="create-project" data-dismiss="modal">Crear</button>
                 </div>
             </div>
 
         </div>
     </div>
-    
     <script src="../../dist/bundle.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js" integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k"
         crossorigin="anonymous"></script>
-
 </body>
 
 </html>
