Fixed implementation projectToMaster

--- a/src/projectModule/views/index.html
+++ b/src/projectModule/views/index.html
@@ -21,7 +21,7 @@
         </div>
     </div>
     <button class="btn-info" id="show-all-projects">Mostrar todos los Proyectos</button>
-    <button type="button" class="btn-info" data-toggle="modal" data-target="#createModal" id="open-create-modal">Crear
+    <button class="btn-info" data-toggle="modal" data-target="#createModal" id="open-create-modal">Crear
         Proyecto</button>
     <div id="projects"></div>
 
